# llm-fallback-chain-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: async_chain.rs  serde.rs  sync.rs
